package Bridge;

public class BridgeMain {
    //static RefinedAbstraction abs;
    public static void main(String[] args) {
        RefinedAbstraction abs;
        abs = new RefinedAbstraction();
        abs.Operation();
    }
}
