package Bridge;

public class ConcreteImplementorA extends Implementor{
    @Override
    String OperationImp() {
        return "A";
    }
}
