package State;

public class State {
    void Handle(Context ctx) {
    }
}
