@startuml

title __DESÝGNPATTERNS's Class Diagram__\n

  namespace Bridge {
    class Bridge.Abstraction {
    }
  }
  

  namespace Bridge {
    class Bridge.BridgeMain {
    }
  }
  

  namespace Bridge {
    class Bridge.ConcreteImplementorA {
    }
  }
  

  namespace Bridge {
    class Bridge.ConcreteImplementorB {
    }
  }
  

  namespace Bridge {
    class Bridge.Implementor {
    }
  }
  

  namespace Bridge {
    class Bridge.RefinedAbstraction {
    }
  }
  

  namespace Decorator {
    class Decorator.Component {
    }
  }
  

  namespace Decorator {
    class Decorator.ConcreteComponent {
    }
  }
  

  namespace Decorator {
    class Decorator.ConcreteDecoratorA {
    }
  }
  

  namespace Decorator {
    class Decorator.ConcreteDecoratorB {
    }
  }
  

  namespace Decorator {
    class Decorator.Decorator {
    }
  }
  

  namespace Decorator {
    class Decorator.DecoratorMain {
    }
  }
  

  namespace State {
    class State.ConcreteStateA {
    }
  }
  

  namespace State {
    class State.ConcreteStateB {
    }
  }
  

  namespace State {
    class State.Context {
    }
  }
  

  namespace State {
    class State.State {
    }
  }
  

  namespace State {
    class State.StateMain {
    }
  }
  

  Bridge.Abstraction o-- Bridge.Implementor : imp
  Bridge.ConcreteImplementorA -up-|> Bridge.Implementor
  Bridge.ConcreteImplementorB -up-|> Bridge.Implementor
  Bridge.RefinedAbstraction -up-|> Bridge.Abstraction
  Decorator.ConcreteComponent -up-|> Decorator.Component
  Decorator.ConcreteDecoratorA -up-|> Decorator.Decorator
  Decorator.ConcreteDecoratorB -up-|> Decorator.Decorator
  Decorator.Decorator -up-|> Decorator.Component
  Decorator.Decorator o-- Decorator.Component : component
  State.ConcreteStateA -up-|> State.State
  State.ConcreteStateB -up-|> State.State
  State.Context o-- State.State : currentState


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
